Skreiv litt om prinsen frå Sogn

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,9 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>SKRIV OM DEG SJØLVE. BOKNORSKE.</p>
+      <p>Oppvaksen i Gulen, i Sogn, men har budd dei siste åra i bergensområdet. Utdanna tømrar, og elektronikkingeniør. 
+	  Studerar no til å bli dataingeniør.</p>
+	  <p>Glad i data, elektronikk, gaming, trening, og ellers å halde seg innandørs i ein svart kjellar - langt frå folk.</p>
     </div>
   </div>
   <hr>
