Fiksa viktig arbeid
Viktig!!!

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>SKRIV OM DEG SJØLVE. BOKNORSKE.</p>
+      <p>Oppvaksen på Bjoa, ei bygd i Vindafjord, og har dei siste 4 åra budd i Bergen. Har nå eit halvt år igjen på ein bachelor i informasjonteknologi
+       </p>
+       <p>Glad i programmering, spill, trening og fotball. VOLVO 4 LIFE <3333 </p>
     </div>
   </div>
   <hr>
@@ -48,7 +50,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Oppvaksen i Gulen, i Sogn, men har budd dei siste åra i bergensområdet. Utdanna tømrar, og elektronikkingeniør. 
+      <p>Oppvaksen i Gulen, i Sogn, men har budd dei siste åra i bergensområdet. Utdanna tømrar, og elektronikkingeniør.
 	  Studerar no til å bli dataingeniør.</p>
 	  <p>Glad i data, elektronikk, gaming, trening, og ellers å halde seg innandørs i ein svart kjellar - langt frå folk.</p>
     </div>
@@ -64,7 +66,10 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>SKRIV OM DEG SJØLVE. BOKNORSKE.</p>
+      <p>Oppvokst i Helldalsåsen, Bergen. Jeg har bodd i Bergen i alle år, men tenker nå å flytte til Trondheim. </br>
+        Deltidsjobb på Shell 7-Eleven Natland siden 2010.</p>
+      <p>Glad i koding, trening, gaming og basketball.
+      </p>
     </div>
   </div>
   <hr>
@@ -91,7 +96,15 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-white">
       <h4><b>Prosjektet</b></h4>
       <p>
-        OM PROSJEKTET.
+        Vi ble tildelt prosjektet Arnatrimmen av Jarle Lysebo.</br> Gjennom sin rolle som speiderleder har han sett behovet
+        for å effektivisere orienteringsløpene som han og speiderene setter opp hvert år. Penn og papir er utdatert,
+        ønsket er nå en applikasjon som lar brukeren taste inn koden til posten.</br> Ved slik registrering sparer man
+        både tid og energi på alle områder innen postjakt/orienteringsløp.
+      </p>
+      <p>
+        Vi vil de neste månedene erfare hvordan det er å løse en oppgave, hvor vi vil jobbe sammen med Jarle og
+        speiderene og få veiledning av Remy.</br> Vi vil lære mer om orientering, samt være ute i "felten" og teste
+        applikasjonen.
       </p>
     </div>
   </div><hr>
