--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container">
       <p>Oppvokst i Helldalsåsen, Bergen. Jeg har bodd i Bergen i alle år, men tenker nå å flytte til Trondheim. </br>
         Deltidsjobb på Shell 7-Eleven Natland siden 2010.</p>
-      <p>Glad i koding, trening, gaming og basketball.
+      <p>Glad i programmering, trening, gaming og basketball.
       </p>
     </div>
   </div>
