--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,6 +18,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <header class="w3-container w3-center w3-padding-32">
   <h1><b>Vår Prosjektblogg</b></h1>
   <p>Velkommen til <span class="w3-tag">Gruppe 7</span> sin blogg.</p>
+  <p><a href="bloggInnlegg.html" style="text-decoration:none;">Klikk her for å se våre <span class="w3-tag">Ukentlige</span> blogginnlegg.</a></p>
 </header>
 
 <!-- Grid -->
@@ -34,9 +35,13 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Oppvaksen på Bjoa, ei bygd i Vindafjord, og har dei siste 4 åra budd i Bergen. Har nå eit halvt år igjen på ein bachelor i informasjonteknologi
-       </p>
-       <p>Glad i programmering, spill, trening og fotball. VOLVO 4 LIFE <3333 </p>
+      <p>
+        Oppvaksen på Bjoa, ei bygd i Vindafjord, og har dei siste 4 åra budd i Bergen.
+        Har nå eit halvt år igjen på ein bachelor i informasjonteknologi
+      </p>
+      <p>
+        Glad i programmering, spill, trening og fotball.
+      </p>
     </div>
   </div>
   <hr>
@@ -50,9 +55,14 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Oppvaksen i Gulen, i Sogn, men har budd dei siste åra i bergensområdet. Utdanna tømrar, og elektronikkingeniør.
-	  Studerar no til å bli dataingeniør.</p>
-	  <p>Glad i data, elektronikk, gaming, trening, og ellers å halde seg innandørs i ein svart kjellar - langt frå folk.</p>
+    <p>
+      Oppvaksen i Gulen, i Sogn, men har budd dei siste åra i bergensområdet.
+      Utdanna tømrar, og elektronikkingeniør. Studerar no til å bli dataingeniør.
+    </p>
+	  <p>
+      Glad i data, elektronikk, gaming, trening, og ellers å halde seg innandørs
+      i ein svart kjellar - langt frå folk.
+    </p>
     </div>
   </div>
   <hr>
@@ -66,9 +76,11 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <div class="w3-container">
-      <p>Oppvokst i Helldalsåsen, Bergen. Jeg har bodd i Bergen i alle år, men tenker nå å flytte til Trondheim. </br>
-        Deltidsjobb på Shell 7-Eleven Natland siden 2010.</p>
-      <p>Glad i programmering, trening, gaming og basketball.
+      <p>
+        Oppvokst i Helldalsåsen, Bergen. Jeg har bodd i Bergen i alle år, men tenker nå å flytte til Trondheim. </br>
+        Deltidsjobb på Shell 7-Eleven Natland siden 2010.
+      </p>
+      <p>Glad i programmering, trening, spill og basketball.
       </p>
     </div>
   </div>
@@ -84,26 +96,26 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-white">
       <h4><b>Gruppe 7</b></h4>
       <p>
-        Gruppe 7 består av Jone Helleland Dagsland, Thomas Asheim Smedmann og Torkel Kårstad Nes. </br>
-        Vi ble tildelt bacheloroppgaven Arnatrimmen.
+        Gruppe 7 består av Torkel Kårstad Nes, Jone Helleland Dagsland og Thomas Asheim Smedmann. </br>
+        Vi ble tildelt bacheloroppgaven Postjakt.
       </p>
     </div>
   </div><hr>
 
   <!-- About Card -->
   <div class="w3-card-2 w3-margin w3-margin-top">
-  <img src="img/arnatrimmen.png" style="width:100%">
+  <img src="img/postjakt.png" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Prosjektet</b></h4>
       <p>
-        Vi ble tildelt prosjektet Arnatrimmen av Jarle Lysebo.</br> Gjennom sin rolle som speiderleder har han sett behovet
+        Vi ble tildelt prosjektet Postjakt av Jarle Lysebo.</br> Gjennom sin rolle som speiderleder har han sett behovet
         for å effektivisere orienteringsløpene som han og speiderene setter opp hvert år. Penn og papir er utdatert,
-        ønsket er nå en applikasjon som lar brukeren taste inn koden til posten.</br> Ved slik registrering sparer man
-        både tid og energi på alle områder innen postjakt/orienteringsløp.
+        ønsket er nå en applikasjon som lar brukeren taste inn koden til posten.</br>
+        Ved slik registrering sparer man både tid og energi på alle områder innenfor postjakt.
       </p>
       <p>
         Vi vil de neste månedene erfare hvordan det er å løse en oppgave, hvor vi vil jobbe sammen med Jarle og
-        speiderene og få veiledning av Remy.</br> Vi vil lære mer om orientering, samt være ute i "felten" og teste
+        speiderene og få veiledning av Remy Andre Monsen.</br> Vi vil lære mer om orientering, samt være ute i "felten" og teste
         applikasjonen.
       </p>
     </div>
