Finpussa litt tekst og skalerte ned bilde + 3 nye blogginnlegg

--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -28,12 +28,80 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l13 s12">
 
   <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
+  <div id="første" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Første blogginnlegg!</b></h3>
+      <h5>Dato <span class="w3-opacity">tidleg 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Herre min hatt, og dra meg baklengs inn i fuglekassa! No skjer det!
+      </p>
+      <p>
+        Me er inne i siste semester av vår treårige bachelorutdanning! (toårig om du heiter Thomas)<br>
+        Det er ikkje tvil at dei neste månadane vert spennande!
+      </p>
+      <p>
+        Her i prosjektbloggen vår vil me komme med vekentlege (minimum) innlegg om status,
+        og anna informajon, i forbindelse med bacheloroppgåva vår.<br>
+        Innlegg vil i utgangspunktet verte skreve på vegne av heile gruppa (gruppe 7).<br>
+        I gruppa er me to nynorskforskjemparar (berre litt) og ein sta bergensar (berre veldig), så innlegga vil nok variere litt språkleg - alt etter kven som skriv!
+        Men det trur me bere vil vere med å fargelegge bloggen! ❤
+      </p>
+    </div>
+  </div>
+  <hr>
+
+  <!-- Blog entry -->
+  <div id="8-februar" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Oppstartmøte</b></h3>
+      <h5>Dato <span class="w3-opacity">8. Februar 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        I går hadde me vårt første (skikkelege) møte med oppdragsgivar!
+      </p>
+      <p>
+        På eit møterom i 5. etasje, møttast me; Torkel, Jone, Thomas, rådgivar Remy, Jarle og Tor Helge frå speidarane i Arna.<br>
+        Trur dei fleste av oss var ganske så spente!
+      </p>
+      <p>
+        Remy var den fyrste som tok ordet, og innleda møte med litt generell info om bacheloroppgåva,
+        og korleis prosessen vanlegvis går føre seg.<br>
+        Sjølv om me hadde laga oss nokon tankar før møte,
+        og hadde sett for oss korleis ein eventuell agenda kunne sjå ut,
+        var oppdragsgivar Jarle uten tvil godt forbredt.<br>
+        Det var tydeleg at han har hatt ideen om "Postjakt" i tankane lenge.<br>
+        Uten å nøle, lot me Jarle styre møteagendaen.
+      </p>
+      <p>
+        Som ledar for Arna speidarane,
+        har han sett eit behov for modarnisering av korleis registrering av postar i orienteringsturar vert handtert.
+        Og han hadde klare tankar om korleis dette kunne forbedrast, samt ambisjonar om at løysinga kunne komme til å skape interesse på landsbasis.
+      </p>
+      <p>
+        Tor Helge, ein av speidarane i Arna, er 14 år og har allerede laga fleire Android applikasjonar.
+        Han har også si eiga nettside; <a href="http://www.torhelge.no/">torhelge.no</a>!<br>
+        Tor Helge kjem også til å delta på framtidige møte, saman med Jarle, som ein representant frå Arna Speidergruppe og som ein aktuell sluttbrukar av applikasjonen vår.<br>
+        Me håpar også at me kan vere med å bidra positivt til Tor Helge si framtid som programmerar!
+      </p>
+      <p>
+        Kort oppsummert var det eit innhaldsrikt møte, med fokus på å bli kjent,
+        men også å skape eit felles bilde over kva for problem som skal løysast, og korleis me kan løyse dette problemet.
+        Framover vil fokuset forsvinne litt frå bacheloroppgåva ettersom det nermar seg eksamenstid.<br>
+        Men det blir spennande på neste møte, når prosjektet har starta for fullt!
+      </p>
+    </div>
+  </div>
+  <hr>
+
+  <!-- Blog entry -->
+  <div id="22-mars" class="w3-card-4 w3-margin w3-white">
     <div class="w3-container w3-padding-8">
       <h3><b>Bachelor Kickoff</b></h3>
-      <h5>Dato <span class="w3-opacity">22. Juni 2017</span></h5>
+      <h5>Dato <span class="w3-opacity">22. Mars 2017</span></h5>
     </div>
-
     <div class="w3-container">
       <p>
         Da var endelig dagen for bachelor kickoff kommet!</br>
@@ -58,6 +126,66 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   </div>
   <hr>
+
+  <!-- Blog entry -->
+  <div id="1-april" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Forprosjektrapport levert!</b></h3>
+      <h5>Dato <span class="w3-opacity">31. Mars 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Då var forprosjektrapporten levert!
+      </p>
+      <p>
+        Dei siste 2 vekene (særleg den siste) har meir eller mindre kun gåt med på å komme i mål med forprosjektrapporten.
+        Rapporten er på mange måtar den fyrste delen av den større prosjektrapporten som skal inn i Juni.
+        Me har tatt for oss oppgåva, utdjupa problemstillinga,
+        komt med forslag til løysing,
+        og bestemt oss for kva for verktøy me vil støtte oss på.
+      </p>
+      <p>
+        Kort oppsummert skal det lagast ein hybrid mobilapplikasjon vha Ionic (Ionic 2),
+        ein webapplikason vha Angular og Bootstrap, og back-end (database, hosting-server, lagring) vha Firebase.
+        Og etter forrige møte med oppdragsgivar har me utarbeida ein meir detaljert beskrivelse av nødvendig funksjonalitet til systemet.
+      </p>
+      <p>
+        Me føle oss ganske sikker på at me har gjort riktig valg av hjelpemiddel,
+        men det vil verte utfordrane å få til ei smart og god løysing.
+        Angular er eit stort rammeverk å lære seg, og Firebase sin NoSQL database blit nytt og spennande.
+      </p>
+    </div>
+  </div>
+  <hr>
+
+  <!-- Blog entry -->
+  <div id="2-april" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Status 2. April</b></h3>
+      <h5>Dato <span class="w3-opacity">2. April 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        På mandag skal forprosjektrapporten presanterast.
+      </p>
+      <p>
+        I skrivande stund blir siste finpuss gjort på rapporten.
+        Me har også fått litt råd av Remy, og trur me skal få til ein bra presentasjon.
+        Det vert spennande å høyre på tilbakemeldingar etterpå.
+      </p>
+      <p>
+        Me har absolutt starta å kjenne på alvoret rundt det å skrive ei bacheloroppgåve,
+        og forventar ein hektisk periode med mykje arbeid.
+        Samtidig gler me oss utruleg mykje til å verkeleg dykke inn i problemet, og få starte å skrive litt skikkeleg kode!
+      </p>
+      <p>
+        Forhåpentlegvis får me også litt tid til å oppdatere prosjektbloggen innimellom!<br>
+        Målet er framleis (minimum) eit innlegg for veka, sjølv om me ikkje heilt har innfridd i det siste ;)
+      </p>
+    </div>
+  </div>
+  <hr>
+
 <!-- END BLOG ENTRIES -->
 </div>
 
@@ -68,7 +196,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top w3-center">
+  <p>
+    Powered by <a href="https://www.w3schools.com/w3css/">w3.css</a> and based on
+    <a href="https://www.w3schools.com/w3css/w3css_templates.asp">W3.CSS Template</a>
+  </p>
 </footer>
 
 </body>
