--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,9 +24,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Grid -->
 <div class="w3-row">
 
-<!-- Blog entries -->
+<!-- Group members -->
 <div class="w3-col l8 s12">
-  <!-- Blog entry -->
+  <!-- Jone -->
   <div class="w3-card-4 w3-margin w3-white">
     <img src="img/bjoa.jpg" alt="Nature" style="width:100%">
     <div class="w3-container w3-padding-8">
@@ -46,7 +46,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   </div>
   <hr>
 
-  <!-- Blog entry -->
+  <!-- Thomas -->
   <div class="w3-card-4 w3-margin w3-white">
     <img src="img/gulen.jpg" alt="Nature" style="width:100%">
     <div class="w3-container w3-padding-8">
@@ -60,14 +60,13 @@ and is wrapped around the whole page content, except for the footer in this exam
       Utdanna tømrar, og elektronikkingeniør. Studerar no til å bli dataingeniør.
     </p>
 	  <p>
-      Glad i data, elektronikk, gaming, trening, og ellers å halde seg innandørs
-      i ein svart kjellar - langt frå folk.
+      Glad i data, elektronikk, gaming, og trening.
     </p>
     </div>
   </div>
   <hr>
 
-  <!-- Blog entry -->
+  <!-- Torkel -->
   <div class="w3-card-4 w3-margin w3-white">
     <img src="img/bergen.jpg" alt="Nature" style="width:100%">
     <div class="w3-container w3-padding-8">
@@ -85,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   </div>
   <hr>
-<!-- END BLOG ENTRIES -->
+<!-- END GROUP MEMBERS -->
 </div>
 
 <!-- Introduction menu -->
@@ -97,7 +96,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <h4><b>Gruppe 7</b></h4>
       <p>
         Gruppe 7 består av Torkel Kårstad Nes, Jone Helleland Dagsland og Thomas Asheim Smedmann. </br>
-        Vi ble tildelt bacheloroppgaven Postjakt.
+        Vi ble tildelt bacheloroppgaven "Postjakt".
       </p>
     </div>
   </div><hr>
@@ -108,14 +107,18 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-white">
       <h4><b>Prosjektet</b></h4>
       <p>
-        Vi ble tildelt prosjektet Postjakt av Jarle Lysebo.</br> Gjennom sin rolle som speiderleder har han sett behovet
-        for å effektivisere orienteringsløpene som han og speiderene setter opp hvert år. Penn og papir er utdatert,
-        ønsket er nå en applikasjon som lar brukeren taste inn koden til posten.</br>
-        Ved slik registrering sparer man både tid og energi på alle områder innenfor postjakt.
+        I sammarbeid med Arna Speidergruppe og Jarle Lysebro,
+        skal det utviklest et system som gjør hverdagen enklere for de som er glad i orienteringsturer.
       </p>
       <p>
-        Vi vil de neste månedene erfare hvordan det er å løse en oppgave, hvor vi vil jobbe sammen med Jarle og
-        speiderene og få veiledning av Remy Andre Monsen.</br> Vi vil lære mer om orientering, samt være ute i "felten" og teste
+        Gjennom sin rolle som speiderleder har Jarle Lysebo sett behovet
+        for å effektivisere orienteringsløpene som han og speiderene setter opp hvert år. Penn og papir er utdatert!
+        Ønsket er nå en applikasjon som gjør det lettere for brukeren å registrere postbesøk.
+        Målet er også å gjøre det like enklet å arrangere som å delta på orienteringsturer.
+      </p>
+      <p>
+        Vi vil de neste månedene erfare hvordan det er å løse en større oppgave, hvor vi vil jobbe sammen med Jarle og
+        speiderene, og få veiledning av veileder Remy Andre Monsen. Vi vil lære mer om orientering, samt være ute i "felten" og teste
         applikasjonen.
       </p>
     </div>
@@ -132,7 +135,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+<footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top w3-center">
+  <p>
+    Powered by <a href="https://www.w3schools.com/w3css/">w3.css</a> and based on
+    <a href="https://www.w3schools.com/w3css/w3css_templates.asp">W3.CSS Template</a>
+  </p>
 </footer>
 
 </body>
