--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -205,6 +205,35 @@ and is wrapped around the whole page content, except for the footer in this exam
       </div>
     </div>
     <hr>
+    
+<!-- Blog entry -->
+<div id="12-april" class="w3-card-4 w3-margin w3-white">
+	<div class="w3-container w3-padding-8">
+	  <h3><b>Status 12. April</b></h3>
+	  <h5>Dato <span class="w3-opacity">12. April 2017</span></h5>
+	</div>
+	<div class="w3-container">
+	  <p><b><i>Her kjem eit påskedikt, me snakkast på sikt</i></b><p>
+	  <p>
+	    No går me inn i dei heilage dagar <br>
+	    Og difor ynskjer me å slappa av sjølv om me app lagar.<br>
+	    Påsken er no komen,<br>
+	    Og skulen ynskjer oss ikkje velkomen.<br>
+	    Alle ei lita stund fra Bergen dreg,<br>
+	    Ikkje alle skal passa på kveg.
+	  </p>
+	  <p>
+	    Me er komen godt i gong med mobil og web app,<br>
+	    Så du kan ikkje sei at me er slapp!<br>
+	    Det turar og går, databasen har tatt form.<br>
+	    Etter ferien er me klar for å ta bacheloren med storm.
+	  </p>
+	  <p>
+	    Ynskjer alle ei meget fin påsketid, og minnast det som skjedde.
+	  </p>
+	</div>
+	</div>
+<hr>
 
 <!-- END BLOG ENTRIES -->
 </div>
