To nye blogginnlegg

--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -207,7 +207,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   </div>
   <hr>
-    
+
 <!-- Blog entry -->
 <div id="12-april" class="w3-card-4 w3-margin w3-white">
 	<div class="w3-container w3-padding-8">
@@ -236,8 +236,57 @@ and is wrapped around the whole page content, except for the footer in this exam
 	</div>
 	</div>
 	<hr>
-	
-	
+
+  <!-- Blog entry -->
+  <div id="20-april" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Møte med Jarle</b></h3>
+      <h5>Dato <span class="w3-opacity">20. April 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Det første på agendaen var gjennomgang av oppsettet til databasen. Då me i det siste har omstrukturert dataene og lagt til ny data. Jarle kom med nokre innspel om data som kanskje
+        ikkje var nødvendige og om nokre som mangla. Dette er nok dei siste endringane på databasen på ei stund, då me nå vil testa om den gjeldande strukturen held mål. Det har ei lita stund vert diskutert i gruppa om Firebase var det rette valet,
+        og om ein burde gå over til ein SQL database. Men etter dette møte vart me einige om å forsetta med Firebase, då tida er knapp og det vart for mykje arbeid å
+        konvertera til ein SQL database.
+      </p>
+      <p>
+        Deretter vart layout på webapplikasjonen, både framsida og konsollen, diskutert. Det som var gjort til nå vart vist fram. Me vart einige om at me skal forsetta med det standard dashboard utsjånadet til konsollen.
+        Når det kom til framsida, postjakt.no, foreslo Jarle at dei kunne ordna den, og at me kunne fokusera 100% på konsollen. Dette synes me var eit godt forslag og takka derfor ja.
+      </p>
+      <p>
+        Det aller siste på agendaen var mobilapplikasjonen. Det vart vist fram det som er gjort til nå. Jarle kom med nokre innspel om kva som kan forbetrast og om kva som mangla.
+      </p>
+    </div>
+  </div>
+  <hr>
+
+
+      <!-- Blog entry -->
+      <div id="26-april" class="w3-card-4 w3-margin w3-white">
+        <div class="w3-container w3-padding-8">
+          <h3><b>Tilbakemelding på forprosjektsrapport</b></h3>
+          <h5>Dato <span class="w3-opacity">26. April 2017</span></h5>
+        </div>
+        <div class="w3-container">
+          <p>
+            Denne veka har me hatt møte med rettleiar angåande forprosjektsrapporten vår.
+          </p>
+          <p>
+            Rapporten var altfor lang, men innhaldet var grett. Her har gruppa misforstått korleis ein forprosjektrapport skulle ver, og rapporten blei ein miks mellom den endelege versjonen og ein forsprosjektsrapport.
+            Enkelte emner i rapporten var litt for deltajert og nokre kanskje uinteressante. Dette tar me med oss og kuttar ned på enkelte områder og fjernar dei som ikkje er relevant
+          </p>
+          <p>
+            Ellers var det to hovudpunkter som må arbeidast med; tidsplanen og språket. Tidsplanen må me bruka litt tid på, då den kun fortel kor mykje med planleggjer å arbeida og ikkje estimert tid på kor lang tid enkelte arbeidsoppgåver vil ta.
+            Det siste var språket i rapporten. Der var det to problemer som skilte seg ut: me vekslar mellom bruk av ord som har same meining og me må ikkje bruka muntligspråk i rapporten.
+          </p>
+        </div>
+      </div>
+      <hr>
+
+
+
+
 
 <!-- END BLOG ENTRIES -->
 </div>
