--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -261,29 +261,74 @@ and is wrapped around the whole page content, except for the footer in this exam
   </div>
   <hr>
 
+  <!-- Blog entry -->
+  <div id="26-april" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Tilbakemelding på forprosjektsrapport</b></h3>
+      <h5>Dato <span class="w3-opacity">26. April 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Denne veka har me hatt møte med rettleiar angåande forprosjektsrapporten vår.
+      </p>
+      <p>
+        Rapporten var altfor lang, men innhaldet var grett. Her har gruppa misforstått korleis ein forprosjektrapport skulle ver, og rapporten blei ein miks mellom den endelege versjonen og ein forsprosjektsrapport.
+        Enkelte emner i rapporten var litt for deltajert og nokre kanskje uinteressante. Dette tar me med oss og kuttar ned på enkelte områder og fjernar dei som ikkje er relevant
+      </p>
+      <p>
+        Ellers var det to hovudpunkter som må arbeidast med; tidsplanen og språket. Tidsplanen må me bruka litt tid på, då den kun fortel kor mykje med planleggjer å arbeida og ikkje estimert tid på kor lang tid enkelte arbeidsoppgåver vil ta.
+        Det siste var språket i rapporten. Der var det to problemer som skilte seg ut: me vekslar mellom bruk av ord som har same meining og me må ikkje bruka muntligspråk i rapporten.
+      </p>
+    </div>
+  </div>
+  <hr>
 
-      <!-- Blog entry -->
-      <div id="26-april" class="w3-card-4 w3-margin w3-white">
-        <div class="w3-container w3-padding-8">
-          <h3><b>Tilbakemelding på forprosjektsrapport</b></h3>
-          <h5>Dato <span class="w3-opacity">26. April 2017</span></h5>
-        </div>
-        <div class="w3-container">
-          <p>
-            Denne veka har me hatt møte med rettleiar angåande forprosjektsrapporten vår.
-          </p>
-          <p>
-            Rapporten var altfor lang, men innhaldet var grett. Her har gruppa misforstått korleis ein forprosjektrapport skulle ver, og rapporten blei ein miks mellom den endelege versjonen og ein forsprosjektsrapport.
-            Enkelte emner i rapporten var litt for deltajert og nokre kanskje uinteressante. Dette tar me med oss og kuttar ned på enkelte områder og fjernar dei som ikkje er relevant
-          </p>
-          <p>
-            Ellers var det to hovudpunkter som må arbeidast med; tidsplanen og språket. Tidsplanen må me bruka litt tid på, då den kun fortel kor mykje med planleggjer å arbeida og ikkje estimert tid på kor lang tid enkelte arbeidsoppgåver vil ta.
-            Det siste var språket i rapporten. Der var det to problemer som skilte seg ut: me vekslar mellom bruk av ord som har same meining og me må ikkje bruka muntligspråk i rapporten.
-          </p>
-        </div>
-      </div>
-      <hr>
+  <!-- Blog entry -->
+  <div id="04-mai" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Møte med Jarle, Tor Helge, og Kristian</b></h3>
+      <h5>Dato <span class="w3-opacity">04. Mai 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Tema på møte var i hovudsak navigering og utsjånad på mobilapplikasjonen. Jarle hadde også med seg to i frå Speidarane, Tor Helge og Kristian.
+        Både Tor Helge og Kristian har vore med på tidlegare møte, og er med som representantar frå Arna Speidergruppe samt som potensielle sluttbrukarar av systemet/appen.
+      </p>
+      <p>
+        Det vart brukt mykje tid på gjennomgang av førebels funksjonalitet i mobilappen, samt korleis appen ser ut. Jamt øve var Jarle og speidarane tilfredstilte, men hadde nokre innspel til forbetringar.
+        Ikkje all navigering var like intuetiv, og nokre kontrollar framsto også som klossete å bruke. Me fekk også kartlagt korleis ei eventuell "quizregistrering" skulle foregå, kor nåverande implementasjon er noko misforstått.
+      </p>
+      <p>
+        Ellers var det lite innspel til fargetemaet som er brukt i appen, og Jarle og Speiderene såg tilsynelatande ut til å like det sei såg.
+        Me var også open med korleis me ligg ann, og at me ikkje heilt er der som me skulle ønske me var. Men me har framleis som mål å ha klart eit fungerande system/app innan bacheloren skal leverast.
+      </p>
+    </div>
+  </div>
+  <hr>
 
+  <!-- Blog entry -->
+  <div id="09-mai" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Status 9. mai</b></h3>
+      <h5>Dato <span class="w3-opacity">09. Mai 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        I det siste har gruppa jobba iherdig med oppgåva, og har framleis som mål å ha eit funksjonelt system/app klart innan bacheloren skal leverast.
+        Dette har ført til at blogg og rapportskriving har blitt sterkt nedprioritert.
+      </p>
+      <p>
+        Om knappe tre veke skal utkastet til bachelorrapporten levarast og vurderast. Semesteret har gått utruleg fort, og me skulle gjerne hatt ein månad til med bacholroppgåva.
+        Sidan me så og sei er inne i siste innspurt av semsteret og bacheloren, har me bestemt oss for å gradvis gå meir og meir over til oppgåvar rundt det å skrive ein god bachelorrapport.
+        To til ein personar vil framleis jobbe med implementajon og finpussing av mobil- og webappen.
+      </p>
+      <p>
+        Me håpar også å snarst mogeleg få gjort appen tilgjengeleg på Play Store for Android, slik at Jarle og Speidarane kan få teste det som er av funksjonalitet hittil.
+        Webappen er allerede ute, men er noko stusseleg. Her vil edringar/oppdateringar forløpande leggast ut på serveren.
+      </p>
+    </div>
+  </div>
+  <hr>
 
 
 
