--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -330,6 +330,30 @@ and is wrapped around the whole page content, except for the footer in this exam
   </div>
   <hr>
 
+  <!-- Blog entry -->
+  <div id="19-mai" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Status 19. mai</b></h3>
+      <h5>Dato <span class="w3-opacity">19. Mai 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Nå nærmer det seg slutten på kode-delen av bacheloroppgaven og vi har nå oppgaven å legge applikasjonen ut på Google Play Store og AppStore.
+        Appen ble i dag lagt ut på Google Play, og kan lastes ned under tittelen "Postjakt". Den ligger ute som en Alfaversjon, slik at vi kan motta tilbakemeldinger fra brukere.
+        Det neste steget vil nå være å få lagt den ut på AppStore - som tar lengre tid grunnet testing i opp til 2 uker.
+      </p>
+      <p>
+        Å legge applikasjonen var mer krevende enn vi hadde tenkt oss, ikke fordi vi gjorde noe feil, men grunnet problemer med path og verktøy som er nødvendig.
+        Videre støtte vi på problemer med Copyright-rettigheter på bildene av Postjaktlogoen vi benyttet oss av. Google hadde funnet lignende bilde, fra arnatrimmen.no har vi kommet frem til, og av denne grunn avviste de forespørselen vår om å legge ut appen.
+        Vi måtte derfor legge ut en versjon uten logoen vår, mens vi samtidig skaffet oss dokument fra Jarle Lysebo som viste at vi hadde tillatelse. Dokumentet er nå sendt til Google og er under vurdering.
+      </p>
+      <p>
+        Ellers var dette en nyttig erfaring og vi er spent på forskjellen mellom å legge ut applikasjon på AppStore og Goole Play.
+      </p>
+    </div>
+  </div>
+  <hr>
+
 
 
 
