--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -354,7 +354,42 @@ and is wrapped around the whole page content, except for the footer in this exam
   </div>
   <hr>
 
-
+  <!-- Blog entry -->
+  <div id="24-mai" class="w3-card-4 w3-margin w3-white">
+    <div class="w3-container w3-padding-8">
+      <h3><b>Møte med Jarle og rapportutkast levert</b></h3>
+      <h5>Dato <span class="w3-opacity">24. Mai 2017</span></h5>
+    </div>
+    <div class="w3-container">
+      <p>
+        Då var fyrste utkast til bachelorrapporten levert! Rapporten er langt frå ferdig, men me har fått med litt innhald over alt.
+        Det blir spennande å sjå kva for tilbakemeldingar me får. For håpentlegvis er me på rett spor.
+      </p>
+      <p>
+        I dag var me ein tur til Straume og besøkte Jarle på kontoret sitt hos Grafisk Digital. Me fekk til og med ein liten omvisning i lokala deira!
+        Etterpå var det kaffi, bollar, og postjakt-nakk på kontoret.
+      </p>
+      <p>
+        Jarle er lite imponert over det som me har fått til per dags dato. Og det er i grunn forståeleg.
+        Me er langt vekke frå der me hadde håpa og trudd me skulle vere.
+        Webapplikasjonen manglar skikkeleg brukarinteraksjon, og er vanskeleg å forstå seg på.
+        Layouten på sida er også nokså malplassert, og det er blant anna knappar som ikkje opptrer som dei skal (forsvinn utforbi skjermen osv).
+        Dette gjeld både visning i mobil og PC.
+      </p>
+      <p>
+        Sjølv om mobilappen tilsynelatande fungerar greit - og ser OK ut - så opplevast den som litt treig og uresponsiv.
+        Noko av navigeringa framstår også som "uventa" og forvirrande (blant ann korleis tilbake-knappen oppførar seg).
+        Offline-modus er heller ikkje implimentert - noko som er avgjerande for at appen i det heile skal takast i bruk.
+      </p>
+      <p>
+        Me vil prøve å forbedre dei mest kritsike punkta fram mot slutten av prosjektet. Men tida er svært begrensa med tanke på rapportskriving osv.
+        Det endelege systemet vil i beste fall framstå som ein tidleg prototype, men vil vere langt frå det me hadde som mål i starten.
+        Kva som skal gjerast med systemet vidare (etter prosjektslutt), vil diskuterast nermare på neste møte med oppdragsgivar. 
+        Sjølve prosjektet/konseptet "Postjakt" vil vidareutviklast, men om vårt resultat vil vere basis vidare i utviklinga er uvvist.
+      </p>
+    </div>
+  </div>
+  <hr>
 
 
 <!-- END BLOG ENTRIES -->
