--- a/public_html/index.html
+++ b/public_html/index.html
@@ -107,7 +107,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-white">
       <h4><b>Prosjektet</b></h4>
       <p>
-        I sammarbeid med Arna Speidergruppe og Jarle Lysebro,
+        I sammarbeid med Arna Speidergruppe og Jarle Lysebo,
         skal det utviklest et system som gjør hverdagen enklere for de som er glad i orienteringsturer.
       </p>
       <p>
