--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -367,7 +367,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       </p>
       <p>
         I dag var me ein tur til Straume og besøkte Jarle på kontoret sitt hos Grafisk Digital. Me fekk til og med ein liten omvisning i lokala deira!
-        Etterpå var det kaffi, bollar, og postjakt-nakk på kontoret.
+        Etterpå var det kaffi, bollar, og postjakt-snakk på kontoret.
       </p>
       <p>
         Jarle er lite imponert over det som me har fått til per dags dato. Og det er i grunn forståeleg.
@@ -390,6 +390,30 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   </div>
   <hr>
+
+
+    <!-- Blog entry -->
+    <div id="29-mai" class="w3-card-4 w3-margin w3-white">
+      <div class="w3-container w3-padding-8">
+        <h3><b>Tilbakemelding på utkast</b></h3>
+        <h5>Dato <span class="w3-opacity">29. Mai 2017</span></h5>
+      </div>
+      <div class="w3-container">
+        <p>
+          Dagen etter første utkastet vart levert fekk me tilbakemelding på den. Det var fleire områder som trengte meir arbeid, spesielt dei som handla om
+          utviklinga, resultatet og forskingsspørsmåla. Ellers var me litt i overkant når det kom til beskrivelse av tekniske komponentar. Språket i rapporten var bra,
+          men til tider litt for muntleg. Ellers burde me slutta med bruk av anførselsteikn rundt engelske ord, og heller finna passande norske ord.
+          Men alt i alt var me på rett spor!
+        </p>
+        <p>
+          Sidan møtet med Jarle har me brukt tida til å levera eit nytt og forbetra utkast til Remy. Det vart levert i kveld! Fram til 2.juni kjem me til å arbeida med plakaten
+          til EXPO og endeleg rapport, i tillegg til å ordne med feil og manglar i web- og mobilapplikasjon når tida strekker til.
+        </p>
+      </div>
+    </div>
+    <hr>
+
+
 
 
 <!-- END BLOG ENTRIES -->
