--- a/public_html/bloggInnlegg.html
+++ b/public_html/bloggInnlegg.html
@@ -413,6 +413,26 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
     <hr>
 
+    <!-- Blog entry -->
+    <div id="05-juni" class="w3-card-4 w3-margin w3-white">
+      <div class="w3-container w3-padding-8">
+        <h3><b>Siste innspurt!</b></h3>
+        <h5>Dato <span class="w3-opacity">5. Juni 2017</span></h5>
+      </div>
+      <div class="w3-container">
+        <p>
+          EXPO plakat er levert, og no nærmar det seg innlevering av rapporten også! I skrivande stund vert siste finpussen på rapporten gjort i leiligheita til Torkel.
+          Det vert digg å få levert rapporten, men me er ikkje heilt ferdig endå. På fredag skal me presentere oppgåva og resultatet for lærarar og medstudentar.
+          Så er det EXPO 14. juni.
+        </p>
+        <p>
+          Til tross for at me ikkje kom så langt som me hadde håpa og trudd, så er me nokså nøgd med resultatet.
+          Når rapporten er levert vil me også gjere litt ekstra finpuss på systemet før overlevering.
+        </p>
+      </div>
+    </div>
+    <hr>
+
 
 
 
